# agentX

./: .coverage  .gitignore  README.md  ai_agent.py  ai_consultancy_agents.py  ai_model_provider.py  communication_manager.py  config.yaml  final_report.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflow/: cd.yml  ci.yml
agents/: business_analyst_agent.py  devops_lead_agent.py  it_consultant_agent.py  markdown_output_agent.py  project_manager_agent.py  solution_architect_agent.py  tech_lead_agent.py
providers/: __init__.py  openai_provider.py
src/agentx/: __init__.py  ai_agent.py  communication_manager.py  main.py
src/agentx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agentx/agents/: business_analyst_agent.py  devops_lead_agent.py  it_consultant_agent.py  markdown_output_agent.py  project_manager_agent.py  solution_architect_agent.py  tech_lead_agent.py
src/agentx/providers/: openai_provider.py
tests/: conftest.py  test_communication_manager.py
